# Pigeon-BE

./: .env.example  .gitignore  PHASE1_COMPLETE.md  Procfile  QUICK_START.md  README.md  SETUP_CHECKLIST.md  check_setup.py  generate_key.py  pyproject.toml  requirements.txt  setup.bat  setup.sh
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: story.yml
apps/accounts/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/accounts/services/: __init__.py  google_oauth.py
apps/classifier/: apps.py  prompts.py  serializers.py  urls.py  views.py
apps/classifier/services/: __init__.py  classifier_service.py  llm_client.py
apps/folders/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/folders/migrations/: 0001_initial.py
apps/mails/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
apps/mails/migrations/: 0001_initial.py
apps/mails/services/: __init__.py  gmail_client.py
apps/sync/: apps.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  development.py  production.py
core/: exceptions.py  pagination.py  permissions.py
pigeon_be/: db.sqlite3  manage.py
pigeon_be/pigeon_be/: asgi.py  urls.py  wsgi.py
pigeon_be/pigeon_commons/: apps.py  exceptions.py  permissions.py
pigeon_be/pigeon_users/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
requirements/: requirements.txt
scripts/: create_admin.py  migrate.sh  runserver.sh  show_urls.sh  test_auth_api.py  test_user_api.py
(+8 files in other folders)
